# hrp

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
hrp/: __init__.py  prado_orig.py  test_benchmark.py
src/hrp/: __init__.py  prado_orig.py
tests/: test_benchmark.py  test_validation.py
